--- a/src/styles/components/top-menu.less
+++ b/src/styles/components/top-menu.less
@@ -2,8 +2,9 @@
     font-family: MuseoSans-500, arial, sans-serif;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
     background-color: @ffe-white;
-    position: relative;
-    z-index: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 3;
 
     &__logo {
         height: 30px;
@@ -34,7 +35,7 @@
     &__link {
         display: inline-block;
         height: 100%;
-        padding: 5px 10px;
+        padding: 10px;
         color: @ffe-grey-charcoal;
         position: relative;
         white-space: nowrap;
@@ -153,12 +154,6 @@
                 opacity: 0;
             }
         }
-    }
-
-    @media screen and (min-width: @breakpoint-lg) {
-        position: fixed;
-        width: 100%;
-        z-index: 1;
     }
 
     &__site-nav-hamburger {
